yaml/sa-demo/ingress/server-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: temporal-codec-server-ingress
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`codec.tmprl-demo.cloud`)
    services:
    - name: temporal-codec-server-service
      passHostHeader: true
      port: 3000
      responseForwarding:
        flushInterval: 100ms
  tls:
    secretName: tmprl-demo-cloud-server-tls
